--- a/css/app.css
+++ b/css/app.css
@@ -203,7 +203,7 @@ a:not(.link) {
   font-size: 200%;
   font-weight: normal;
 }
-.page-header .btn {
+.page-header .button {
   min-width: auto;
 }
 
@@ -234,7 +234,7 @@ a:not(.link) {
   font-weight: normal;
   color: var(--primary);
 }
-.section-header .btn {
+.section-header .button {
   min-width: auto;
 }
 
@@ -349,21 +349,21 @@ hr[class*=s-]:not(.default) {
   margin: 0;
 }
 
-*:not(.input) > .input,
-*:not(.input) > input {
-  background-color: transparent;
+input .input,
+*:not(.input) > .input {
+  /* background-color: transparent; */
   /* margin: 0.25rem 0 1rem; */
   border-radius: 0.25rem;
   border: 1px solid currentColor;
   /* width: 100%; */
 }
-*:not(.input) > .input:not(.has-addon),
-*:not(.input) > input:not(.has-addon) {
+input .input:not(.has-addon),
+*:not(.input) > .input:not(.has-addon) {
   /* align-self: stretch; */
   padding: 0.5rem 1rem;
 }
-*:not(.input) > .input.has-error,
-*:not(.input) > input.has-error {
+input .input.has-error,
+*:not(.input) > .input.has-error {
   border: 1px solid var(--danger);
 }
 
@@ -951,12 +951,12 @@ option[disabled]:first-of-type {
   text-transform: capitalize;
 }
 
-.btn-group,
-.btn-group-vertical {
+.button-group,
+.button-group-vertical {
   border-radius: 0.5rem;
 }
 
-.btn {
+.button {
   position: relative;
   padding: 0.25rem 1.5rem;
   font-size: 120%;
@@ -968,13 +968,13 @@ option[disabled]:first-of-type {
   align-items: center;
   /* border: none; */
 }
-.btn:focus {
+.button:focus {
   outline: 1px solid hsl(var(--secondary-hs), calc(var(--secondary-l) + 50%));
 }
-.btn.btn-block {
+.button.button-block {
   width: 100%;
 }
-.btn.btn-circle {
+.button.button-circle {
   width: 3rem;
   height: 3rem;
   display: inline-flex;
@@ -984,35 +984,35 @@ option[disabled]:first-of-type {
   justify-content: center;
   border-radius: 50%;
 }
-.btn.btn-circle.btn-sm {
+.button.button-circle.button-sm {
   width: 2rem;
   height: 2rem;
 }
-.btn.btn-lg {
+.button.button-lg {
   font-size: 150%;
   padding: 0.5rem 1.25rem;
   min-width: 10rem;
 }
-.btn.btn-sm {
+.button.button-sm {
   font-size: 80%;
 }
-.btn.btn-xs {
+.button.button-xs {
   font-size: 75%;
   padding: 0.125rem 0.5rem;
   min-width: 5rem;
 }
-.btn.btn-block + .btn {
+.button.button-block + .button {
   margin-top: 0.5rem;
 }
 
-.btn-group {
+.button-group {
   /*  margin: 1rem 0; */
   align-items: stretch;
 }
-.btn-group.no-rounded .btn {
+.button-group.no-rounded .button {
   border-radius: 0;
 }
-.btn-group .btn {
+.button-group .button {
   border-radius: inherit;
   align-self: stretch;
   margin: 0;
@@ -1020,7 +1020,7 @@ option[disabled]:first-of-type {
   flex: 1 1 100%;
 }
 
-.btn-group-vertical .btn {
+.button-group-vertical .button {
   border-radius: inherit;
 }
 
@@ -1505,6 +1505,7 @@ table {
 .flex-list.has-connector .item,
 .item-list.has-connector .item {
   margin: 0;
+  width: 100%;
 }
 .flex-list.has-connector .item:not(:first-child) :is(.connector, li::marker)::before, .flex-list.has-connector .item:not(:last-child) :is(.connector, li::marker)::after,
 .item-list.has-connector .item:not(:first-child) :is(.connector, li::marker)::before,
@@ -1552,7 +1553,6 @@ table {
   display: flex;
   /* align-items: center; */
   /* justify-content: space-between; */
-  width: 100%;
   gap: 0.25rem;
   padding: 0 1rem;
   cursor: pointer;
@@ -1842,7 +1842,7 @@ section {
     /* flex-direction: column; */
     width: 100%;
   }
-  .flex-container .btn {
+  .flex-container .button {
     width: 100%;
   }
 
