--- a/css/helper/primefaces.css
+++ b/css/helper/primefaces.css
@@ -4,11 +4,11 @@
 }
 
 .p-steps .p-steps-item.p-highlight .p-steps-number {
-  background-color: var(--secondary) !important;
+  background-color: var(--secondary);
 }
 .p-steps .p-steps-item .p-steps-number {
-  background-color: var(--primary) !important;
-  color: var(--white) !important;
+  background-color: var(--primary);
+  color: var(--white);
 }
 
 .p-tabview.no-header .p-tabview-nav {
@@ -18,7 +18,7 @@
   align-items: stretch;
   flex-wrap: nowrap;
   overflow-x: scroll;
-  border: none !important;
+  border: none;
 }
 .p-tabview .p-tabview-nav li {
   min-width: 20%;
@@ -50,7 +50,7 @@
   border-top-right-radius: inherit;
 }
 .p-dialog .p-dialog-header .p-dialog-header-close:hover {
-  color: var(--danger) !important;
+  color: var(--danger);
 }
 .p-dialog .p-dialog-content {
   padding: 0.25rem 1.5rem;
@@ -65,12 +65,7 @@
 .p-dialog .p-dialog-footer button {
   border: none;
   padding: 0.5rem 1.25rem;
-}
-.p-dialog .p-dialog-footer .btn {
-  margin: 0;
-}
-.p-dialog .p-dialog-footer .btn + .btn {
-  margin-left: 0.5rem;
+  text-transform: capitalize;
 }
 .p-dialog .p-dialog-footer > * {
   margin-top: 1rem;
@@ -81,7 +76,7 @@
   flex-direction: column;
   max-width: 100%;
   max-height: 100%;
-  z-index: 1 !important;
+  z-index: 1;
 }
 .p-overlaypanel .p-overlaypanel-content {
   display: flex;
@@ -90,11 +85,11 @@
 }
 
 .p-toast {
-  z-index: 5 !important;
+  z-index: 5;
 }
 
 .p-badge {
-  font-size: 0.75rem !important;
+  font-size: 0.75rem;
 }
 
 .input > .p-inputtext {
@@ -113,6 +108,19 @@
   border-color: unset;
 }
 
+.p-input-icon-left,
+.p-input-icon-right {
+  display: flex;
+}
+.p-input-icon-left i,
+.p-input-icon-right i {
+  display: flex;
+  align-items: center;
+  position: relative;
+  top: 0;
+  margin-top: 0;
+}
+
 .p-dropdown {
   border-color: currentColor;
 }
@@ -122,11 +130,11 @@
 }
 
 p-chart {
-  width: 100% !important;
+  width: 100%;
 }
 p-chart canvas {
-  width: 100% !important;
-  min-width: 100% !important;
+  width: 100%;
+  min-width: 100%;
 }
 
 .p-calendar {
@@ -165,19 +173,19 @@ p-chart canvas {
 }
 
 .p-panel > :first-child {
-  border-top-left-radius: inherit !important;
-  border-top-right-radius: inherit !important;
+  border-top-left-radius: inherit;
+  border-top-right-radius: inherit;
 }
 .p-panel > :last-child {
-  border-bottom-left-radius: inherit !important;
-  border-bottom-right-radius: inherit !important;
+  border-bottom-left-radius: inherit;
+  border-bottom-right-radius: inherit;
 }
 .p-panel + .p-panel {
   margin-top: 1rem;
 }
 
 .p-accordion .p-accordion-header-link {
-  border-radius: inherit !important;
+  border-radius: inherit;
 }
 
 .p-carousel {
@@ -217,8 +225,8 @@ p-chart canvas {
 }
 .p-carousel .p-carousel-indicators .p-carousel-indicator button {
   border: none;
-  height: 0.25rem !important;
-  border-radius: 0.125rem !important;
+  height: 0.25rem;
+  border-radius: 0.125rem;
 }
 
 .p-paginator-left-content {
@@ -238,9 +246,9 @@ p-chart canvas {
   }
 
   .p-toast {
-    width: auto !important;
-    left: 0.5rem !important;
-    right: 0.5rem !important;
+    width: auto;
+    left: 0.5rem;
+    right: 0.5rem;
   }
 }
 .p-message .p-message-icon {
@@ -249,7 +257,7 @@ p-chart canvas {
 
 .p-toast .p-toast-message .p-toast-icon-close {
   min-width: 2rem;
-  border: none !important;
+  border: none;
 }
 
 .p-selectbutton {
@@ -261,9 +269,8 @@ p-chart canvas {
 }
 
 .p-button {
+  text-transform: capitalize;
   font-size: 120%;
-  border-color: unset;
-  background-color: unset;
 }
 .p-button:hover {
   background-color: hsl(var(--primary-hs), calc(var(--primary-l) - 20%));
