--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -221,6 +221,7 @@
   display: flex;
   transition: transform 0.5s;
   align-items: center;
+  justify-content: center;
 
   .menu-header {
     display: flex;
