feat(sidemenu): integrated grid compactability
chores: moved necessary src files

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -147,7 +147,7 @@ a:not(.link) {
   object-fit: contain;
 }
 
-.app-header {
+.page-header {
   padding: 1rem 1.5rem;
   display: flex;
   align-items: center;
