--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -9,9 +9,6 @@
 */
 
 @mixin mini-side-menu-toggled {
-  width: 15%;
-  flex-basis: 15%;
-
   .menu-header {
     .menu-logo,
     .main-menu-toggle {
@@ -25,19 +22,15 @@
     }
   }
 
-  .nav-menu .nav-item {
+  nav .item {
     justify-content: center;
   }
 
-  .icon {
-    /* margin-right: 0; */
-  }
-
+  nav,
   .menu-header,
-  .menu-footer,
-  .nav-menu {
-    .nav-item,
-    .nav-title {
+  .menu-footer {
+    .item,
+    .title {
       .label {
         opacity: 0;
         transform: translateX(100%);
@@ -45,12 +38,9 @@
       }
     }
 
-    .nav-title {
+    .title {
       border-bottom: thin solid;
       padding: 0;
-
-      &::before {
-      }
     }
   }
 }
@@ -81,15 +71,11 @@ input.main-menu-trigger {
   &:checked {
     ~,
     ~ * {
-      // .side-menu.mini {
-      //   opacity: 1;
-      //   @include mini-side-menu-toggled;
-      // }
-
+      main,
       .page {
         > footer {
-          background-color: var(--primary);
-          color: var(--primary-c);
+          background-color: var(--secondary);
+          color: var(--secondary-c);
         }
       }
     }
@@ -98,37 +84,41 @@ input.main-menu-trigger {
   &:not(:checked) {
     ~,
     ~ * {
-      .menu-logo-alt {
-        display: none;
-      }
     }
   }
 }
 
 .main-menu-toggle {
   position: relative;
-  /* font-size: 120%; */
+  font-size: 120%;
   margin-bottom: 0;
-  /* z-index: 1; */
+  z-index: 1;
 }
 
-.menu-header {
-  display: flex;
-}
-
-.nav-menu {
+nav,
+.menu-header,
+.menu-footer {
   width: 100%;
-  height: 100%;
   display: flex;
+}
+
+nav {
+  height: 100%;
   font-size: 120%;
   gap: 0.5rem;
 
-  .nav-item {
+  .item {
     display: flex;
     align-items: center;
-    padding: 1rem;
+    gap: 0.75rem;
+    padding: 0.75rem 1rem;
     text-decoration: none;
     color: currentColor;
+
+    .label {
+      transition: position 0.25s linear 0.125s, transform 0.25s linear 0.125s,
+        opacity 0.5s linear 0.125s;
+    }
   }
 }
 
@@ -153,11 +143,22 @@ input.main-menu-trigger {
 
   &.grid {
     display: grid;
+    grid-template-rows: 1fr;
     transition: 0.5s;
 
-    // .side-menu {
-    //   width: 100%;
-    // }
+    &:has(> .side-menu) > {
+      main,
+      .page {
+        section {
+          height: 100%;
+          min-height: unset;
+        }
+      }
+    }
+
+    > .side-menu {
+      grid-row: 1 / -1;
+    }
   }
 }
 
@@ -182,20 +183,22 @@ input.main-menu-trigger {
     background-color: currentColor;
   }
 
-  .menu-header {
+  .menu-header,
+  .menu-footer {
     padding: 1rem;
+    align-items: center;
 
     .title {
       transition: height 0.5s linear 0.5s, opacity 0.5s linear 0.5s;
     }
   }
 
-  .nav-menu {
+  nav {
     flex-direction: column;
     overflow-y: scroll;
     overflow-x: hidden;
 
-    .nav-item {
+    .item {
       @include before-content;
 
       &::before {
@@ -204,12 +207,9 @@ input.main-menu-trigger {
         transition: opacity 0.5s;
       }
 
-      &.active {
-        /* border-right: 2px solid; */
-
-        &::before {
-          opacity: 0.25;
-        }
+      // MARKED: Extend & modify this according to UI/Theme
+      &.active::before {
+        opacity: 0.25;
       }
 
       &:hover::before {
@@ -241,11 +241,7 @@ input.main-menu-trigger {
   align-items: center;
   justify-content: center;
 
-  .menu-header {
-    display: flex;
-  }
-
-  .nav-menu {
+  nav {
     align-items: center;
     justify-content: center;
     overflow: scroll;
@@ -255,8 +251,8 @@ input.main-menu-trigger {
 .float-menu {
   display: flex;
 
-  .nav-menu {
-    .nav-item {
+  nav {
+    .item {
       gap: 1rem;
     }
   }
@@ -278,8 +274,8 @@ main {
   z-index: 1;
 
   footer {
-    background-color: var(--secondary);
-    color: var(--white);
+    background-color: var(--primary);
+    color: var(--primary-c);
   }
 }
 
@@ -288,14 +284,36 @@ main {
   padding: 3em;
   width: 100%;
   flex: 1 1 100%;
-  // border: thin solid var(--white);
   transition: margin 0.2s;
+}
+
+/* Excluding Tablets */
+@media (max-width: 575.98px) or (min-width: 768px) {
+  input.main-menu-trigger {
+    &:checked {
+      ~,
+      ~ * {
+        .side-menu .menu-logo-alt {
+          display: none;
+        }
+      }
+    }
+    &:not(:checked) {
+      ~,
+      ~ * {
+        .side-menu:not(.mini) .menu-logo-alt {
+          display: none;
+        }
+      }
+    }
+  }
 }
 
 /* Above <---> Tablets/Mini PC */
 @media (min-width: 768px) {
+  // TODO: Flip minimized state, Make Above tablet minimized when checked, table minimized when unchecked
   .main-menu-container {
-    &.grid:has(> .side-menu):has(> input.main-menu-trigger:checked) {
+    &.grid:has(> .side-menu:not(.mini)):has(> input.main-menu-trigger:checked) {
       grid-template-columns: 0fr 1fr;
     }
 
@@ -317,12 +335,17 @@ main {
           ~,
           ~ * {
             .side-menu.mini {
+              width: 15%;
+              flex-basis: 15%;
               @include mini-side-menu-toggled;
             }
 
-            .page .page-header {
-              .main-menu-toggle {
-                display: none;
+            main,
+            .page {
+              .page-header {
+                .main-menu-toggle {
+                  display: none;
+                }
               }
             }
           }
@@ -336,13 +359,17 @@ main {
 @media (min-width: 576px) {
   .main-menu-container {
     &.grid {
-      &:has(> .side-menu),
+      &:has(> .side-menu:not(.mini)),
       &:has(> .side-menu.mini):has(> input.main-menu-trigger:checked) {
         grid-template-columns: 1fr 4fr;
       }
 
-      &:has(> .side-menu.mini) {
+      &:has(> .side-menu.mini):has(> input.main-menu-trigger:not(:checked)) {
         grid-template-columns: 1fr 11fr;
+        @include mini-side-menu-toggled;
+      }
+      > .side-menu {
+        align-items: center;
       }
     }
 
@@ -358,7 +385,7 @@ main {
     align-items: center;
 
     .menu-header {
-      // .menu-logo,
+      .menu-logo, // TODO: Review
       .main-menu-toggle {
         display: none;
       }
@@ -372,38 +399,45 @@ main {
 
 /* Mobile <---> Tablets/Mini PC */
 @media (min-width: 576px) and (max-width: 767.98px) {
+  // DEBUG: https://sass-lang.com/d/bogus-combinators
+  // input.main-menu-trigger:checked {
+  //   ~,
+  //   ~ * {
+  //     @include unify-selector('.main-menu-container.grid', &) {
+  //       content: 'trigger in grid';
+  //     }
+  //   }
+  // }
+
   .main-menu-container {
-    &.grid:has(> .side-menu):has(> input.main-menu-trigger:checked) {
+    &:has(> .side-menu.mini):has(> input.main-menu-trigger:checked),
+    &:has(> .side-menu:not(.mini)):has(
+        > input.main-menu-trigger:not(:checked)
+      ) {
+      .menu-logo-alt {
+        display: none;
+      }
+    }
+    &.grid:has(> .side-menu:not(.mini)):has(> input.main-menu-trigger:checked) {
       grid-template-columns: 1fr 11fr;
+      @include mini-side-menu-toggled;
     }
 
     &:not(.grid) {
-      input.main-menu-trigger {
-        &:not(:checked) {
-          ~,
-          ~ * {
-            .side-menu * > {
-              .label {
-                transition: position 0.25s linear 0.125s,
-                  transform 0.25s linear 0.125s, opacity 0.5s linear 0.125s;
-              }
-            }
-          }
-        }
-
-        &:checked {
-          ~,
-          ~ * {
-            .side-menu {
-              @include mini-side-menu-toggled;
-            }
+      input.main-menu-trigger:checked {
+        ~,
+        ~ * {
+          .side-menu {
+            width: 15%;
+            flex-basis: 15%;
+            @include mini-side-menu-toggled;
           }
         }
       }
 
       .side-menu {
         .btn,
-        .nav-menu .nav-item {
+        nav .item {
           padding-left: 1rem;
           padding-right: 1rem;
         }
@@ -434,7 +468,7 @@ main {
       ~,
       ~ * {
         .full-menu {
-          .nav-menu {
+          nav {
             display: none;
             /* transform: translateY(-100%); */
             /* opacity: 0; */
@@ -462,10 +496,6 @@ main {
 
           .main-menu-toggle {
             transform: translateX(0);
-          }
-
-          .menu-logo-alt {
-            display: none;
           }
         }
 
@@ -502,17 +532,9 @@ main {
             .menu-logo {
               display: none;
             }
-
-            .menu-logo-alt {
-              fill: var(--white);
-            }
-
-            .silhouette {
-              filter: saturate(0%) brightness(500%);
-            }
           }
 
-          .nav-menu {
+          nav {
             flex-direction: column;
           }
         }
@@ -522,74 +544,78 @@ main {
           width: 100%;
         }
 
-        .page .page-header .main-menu-toggle {
-          transform: translateX(-50%);
+        main,
+        .page {
+          .page-header .main-menu-toggle {
+            transform: translateX(-50%);
+          }
         }
       }
     }
   }
+
   .main-menu-container {
     &.grid:has(> .side-menu) {
       grid-template-columns: 1fr;
     }
-  }
 
-  .side-menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    width: 80%;
-    flex-basis: 80%;
-    transform: translateX(-100%);
-    opacity: 0;
-    box-shadow: 0 0 50px hsla(var(--black-hs), var(--black-l), 0.25);
-    z-index: 2;
-  }
-
-  .full-menu {
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    /* transform: translateY(-100%); */
-    /* opacity: 0; */
-    z-index: 2;
-
-    input.main-menu-trigger:not(:checked) & {
+    .side-menu {
+      position: fixed;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      width: 80%;
+      flex-basis: 80%;
+      transform: translateX(-100%);
+      opacity: 0;
+      box-shadow: 0 0 50px hsla(var(--black-hs), var(--black-l), 0.25);
+      z-index: 2;
     }
 
-    // .nav-menu {
-    //   display: none;
-    // }
+    .full-menu {
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      /* transform: translateY(-100%); */
+      /* opacity: 0; */
+      z-index: 2;
 
-    .menu-header {
-      width: 100%;
+      input.main-menu-trigger:not(:checked) & {
+      }
+
+      // nav {
+      //   display: none;
+      // }
+
+      .menu-header {
+        width: 100%;
+      }
     }
-  }
 
-  .float-menu {
-    position: fixed;
-    bottom: 0;
-    /* left: 0; */
-    right: 0;
-    display: flex;
-    flex-direction: column;
-
-    .nav-menu {
+    .float-menu {
+      position: fixed;
+      bottom: 0;
+      /* left: 0; */
+      right: 0;
+      display: flex;
       flex-direction: column;
+
+      nav {
+        flex-direction: column;
+      }
+
+      nav,
+      .menu-header,
+      .menu-footer {
+        padding: 1rem;
+      }
     }
 
-    .nav-menu,
-    .menu-header,
-    .menu-footer {
-      padding: 1rem;
-    }
-  }
-
-  .page {
-    .page-content {
-      padding: 3em 1em;
+    .page {
+      .page-content {
+        padding: 3em 1em;
+      }
     }
   }
 }
